--- a/client/src/app/video/videos/videos.component.scss
+++ b/client/src/app/video/videos/videos.component.scss
@@ -9,7 +9,7 @@
     }
     
     .video-grid {
-        margin: 0 1em;
+        margin: 0 1vw;
         @supports (-webkit-overflow-scrolling: touch) {
             -webkit-overflow-scrolling: touch;
         } /* Support for IOS device scrolling in mobile Safari */
